--- a/dev/404.html
+++ b/dev/404.html
@@ -9,7 +9,7 @@
     <link rel="preload stylesheet" href="/Tachikoma.jl/dev/assets/style.D7vYS0eO.css" as="style">
     <link rel="preload stylesheet" href="/Tachikoma.jl/dev/vp-icons.css" as="style">
     
-    <script type="module" src="/Tachikoma.jl/dev/assets/app.Ce5-zRD4.js"></script>
+    <script type="module" src="/Tachikoma.jl/dev/assets/app.BuTYCDMc.js"></script>
     <link rel="preload" href="/Tachikoma.jl/dev/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
     <script id="check-dark-mode">(()=>{const e=localStorage.getItem("vitepress-theme-appearance")||"auto",a=window.matchMedia("(prefers-color-scheme: dark)").matches;(!e||e==="auto"?a:e==="dark")&&document.documentElement.classList.add("dark")})();</script>
     <script id="check-mac-os">document.documentElement.classList.toggle("mac",/Mac|iPhone|iPod|iPad/i.test(navigator.platform));</script>
