build based on 3a388e2

--- a/dev/comparison.html
+++ b/dev/comparison.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/Tachikoma.jl/dev/assets/style.D7vYS0eO.css" as="style">
     <link rel="preload stylesheet" href="/Tachikoma.jl/dev/vp-icons.css" as="style">
     
-    <script type="module" src="/Tachikoma.jl/dev/assets/app.C7IgKRfU.js"></script>
+    <script type="module" src="/Tachikoma.jl/dev/assets/app.CpDr6SVt.js"></script>
     <link rel="preload" href="/Tachikoma.jl/dev/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/Tachikoma.jl/dev/assets/chunks/theme.OIztMHgv.js">
+    <link rel="modulepreload" href="/Tachikoma.jl/dev/assets/chunks/theme.uMKPXIt4.js">
     <link rel="modulepreload" href="/Tachikoma.jl/dev/assets/chunks/framework.BUWCGn8t.js">
     <link rel="modulepreload" href="/Tachikoma.jl/dev/assets/comparison.md.Cl_XRdBb.lean.js">
     <script id="check-dark-mode">(()=>{const e=localStorage.getItem("vitepress-theme-appearance")||"auto",a=window.matchMedia("(prefers-color-scheme: dark)").matches;(!e||e==="auto"?a:e==="dark")&&document.documentElement.classList.add("dark")})();</script>
